@@ -11,6 +11,7 @@ import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.level.BlockGetter;
+import net.minecraft.world.level.GameRules;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.entity.BlockEntityType;
@@ -45,9 +46,14 @@ public class CannonDrillBlock extends DirectionalAxisKineticBlock implements IBE
 
 	@Override
 	public void playerWillDestroy(Level level, BlockPos pos, BlockState state, Player player) {
+		destroyExtensionPoles(level, pos, state, !player.isCreative());
+		super.playerWillDestroy(level, pos, state, player);
+	}
+
+	public static void destroyExtensionPoles(Level level, BlockPos pos, BlockState state, boolean dropBlocks) {
+		dropBlocks &= level.getGameRules().getBoolean(GameRules.RULE_DOBLOCKDROPS);
 		Direction dir = state.getValue(FACING);
 		BlockPos headPos = null;
-		boolean dropBlocks = player == null || !player.isCreative();
 
 		int max = maxAllowedDrillLength();
 		for (int i = 1; i < max; ++i) {
@@ -64,9 +70,10 @@ public class CannonDrillBlock extends DirectionalAxisKineticBlock implements IBE
 		}
 
 		if (headPos != null) {
+			boolean dropBlocks1 = dropBlocks;
 			BlockPos.betweenClosedStream(headPos, pos)
 				.filter(p -> !p.equals(pos))
-				.forEach(p -> level.destroyBlock(p, dropBlocks));
+				.forEach(p -> level.destroyBlock(p, dropBlocks1));
 		}
 
 		for (int i = 1; i < max; ++i) {
@@ -78,8 +85,6 @@ public class CannonDrillBlock extends DirectionalAxisKineticBlock implements IBE
 			}
 			break;
 		}
-
-		super.playerWillDestroy(level, pos, state, player);
 	}
 
 	@Override
